--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,7 +29,7 @@ def TAG_FILTER="prod-"
 def HOTFIX_TAG_FILTER = "hotfix-"
 
 //Image Variables
-def IMAGE_NAME = 'helpline'
+def IMAGE_NAME = "helpline"
 
 //Helm and Tiller Stuff
 def TILLER_NAMESPACE = 'ocp-tiller'
@@ -99,7 +99,7 @@ podTemplate(
                         } else if (COMMIT_HEAD_TAG.substring(0,HOTFIX_TAG_FILTER.length()) == HOTFIX_TAG_FILTER) {
                             APP_VERSION = COMMIT_HEAD_TAG.substring(HOTFIX_TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
                         } else {
-                            APP_VERSION = ""COMMIT_HEAD_TAG""
+                            APP_VERSION = COMMIT_HEAD_TAG
                         }
                     }
                     echo 'App Version: ' + APP_VERSION
@@ -217,6 +217,7 @@ podTemplate(
                 }
             }
         }
+        /*
         container('openshift') {
             stage('Create Secrets') {
                 if (env.BRANCH_NAME == 'master') {
@@ -252,78 +253,79 @@ podTemplate(
                 oc create secret generic bt-helpline-secret --from-literal=database-password="${DATABASE_PWD}" --from-literal=keybase="${KEYBASE}"
                 """
             }
+            
+            }
             */
-            }
-            stage('Build Image') {
-                if (env.BRANCH_NAME == 'master') {
-                    echo 'No Build'
-                } else if (env.BRANCH_NAME == 'develop'){
-                    echo 'Build on Develop'
-                    //Builds as :test or :develop
-                    echo 'Image Tag:' + BUILD_IMAGE_TAG
-                    echo 'Full Image Name:' + BUILD_IMAGE_NAME
+        //     stage('Build Image') {
+        //         if (env.BRANCH_NAME == 'master') {
+        //             echo 'No Build'
+        //         } else if (env.BRANCH_NAME == 'develop'){
+        //             echo 'Build on Develop'
+        //             //Builds as :test or :develop
+        //             echo 'Image Tag:' + BUILD_IMAGE_TAG
+        //             echo 'Full Image Name:' + BUILD_IMAGE_NAME
 
-                    /* Real Code Below
-                    // Image tag for "build" will already be set in BuildConfig
-                    oc start-build "helpline-build" --from-repo="." --wait=true --follow -n ${OS_BUILD_PROJECT}
-                    */
-                    sh 'oc whoami'
-                } else if (env.BRANCH_NAME == 'stage'){
-                    echo 'Build on Feature'
-                    //Builds as :feature or :stage
-                    echo 'Image Tag:' + BUILD_IMAGE_TAG
-                    echo 'Full Image Name: ' + BUILD_IMAGE_NAME
-                    /* Real Code Below
-                    // Image tag for "build" will already be set in BuildConfig
-                    oc start-build "helpline-build" --from-repo="." --wait=true --follow -n ${OS_BUILD_PROJECT}
-                    */
-                    sh 'oc whoami'
-                } else if (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)){
-                    echo 'Build on Release'
-                    //Builds as :release 
-                    echo 'Image Tag:' + BUILD_IMAGE_TAG
-                    echo 'Full Image Name: ' + BUILD_IMAGE_NAME
-                    /* Real Code Below
-                    // Image tag for "build" will already be set in BuildConfig
-                    oc start-build "helpline-build" --from-repo="." --wait=true --follow -n ${OS_BUILD_PROJECT}
-                    */
-                    sh 'oc whoami'
+        //             /* Real Code Below
+        //             // Image tag for "build" will already be set in BuildConfig
+        //             oc start-build "helpline-build" --from-repo="." --wait=true --follow -n ${OS_BUILD_PROJECT}
+        //             */
+        //             sh 'oc whoami'
+        //         } else if (env.BRANCH_NAME == 'stage'){
+        //             echo 'Build on Feature'
+        //             //Builds as :feature or :stage
+        //             echo 'Image Tag:' + BUILD_IMAGE_TAG
+        //             echo 'Full Image Name: ' + BUILD_IMAGE_NAME
+        //             /* Real Code Below
+        //             // Image tag for "build" will already be set in BuildConfig
+        //             oc start-build "helpline-build" --from-repo="." --wait=true --follow -n ${OS_BUILD_PROJECT}
+        //             */
+        //             sh 'oc whoami'
+        //         } else if (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)){
+        //             echo 'Build on Release'
+        //             //Builds as :release 
+        //             echo 'Image Tag:' + BUILD_IMAGE_TAG
+        //             echo 'Full Image Name: ' + BUILD_IMAGE_NAME
+        //             /* Real Code Below
+        //             // Image tag for "build" will already be set in BuildConfig
+        //             oc start-build "helpline-build" --from-repo="." --wait=true --follow -n ${OS_BUILD_PROJECT}
+        //             */
+        //             sh 'oc whoami'
 
-                    //Tag as :gittag for deployment
-                    echo 'Tag Image as COMMIT_HEAD_TAG also'
-                    sh "echo 'oc tag ${BUILD_IMAGE_NAME} ${DEPLOY_IMAGE_NAME}'"
-                    echo 'Deploy Image Name (Different than Build): ' + DEPLOY_IMAGE_NAME
+        //             //Tag as :gittag for deployment
+        //             echo 'Tag Image as COMMIT_HEAD_TAG also'
+        //             sh "echo 'oc tag ${BUILD_IMAGE_NAME} ${DEPLOY_IMAGE_NAME}'"
+        //             echo 'Deploy Image Name (Different than Build): ' + DEPLOY_IMAGE_NAME
 
-                    //If we want to "build" as GitTag, we'll need to create a new Build-Config each time, with that GitTag version. Not sure it makes difference. Future idea?
-                } else if (env.BRANCH_NAME.contains(HOTFIX_TAG_FILTER) && COMMIT_HEAD_TAG.contains(HOTFIX_TAG_FILTER)){
-                    echo 'Build on HotFix'
-                    //Builds as :hotfix 
-                    echo 'Image Tag:' + BUILD_IMAGE_TAG
-                    //Will need to either create a build-config on the fly, or create one ahead of time specifically for hotfix.
-                    echo 'Full Image Name: ' + BUILD_IMAGE_NAME
-                    /* Real Code Below
-                    // Image tag for "build" will already be set in BuildConfig
-                    oc start-build "helpline-build-hotfix" --from-repo="." --wait=true --follow -n ${OS_BUILD_PROJECT}
-                    */
-                    sh 'oc whoami'
+        //             //If we want to "build" as GitTag, we'll need to create a new Build-Config each time, with that GitTag version. Not sure it makes difference. Future idea?
+        //         } else if (env.BRANCH_NAME.contains(HOTFIX_TAG_FILTER) && COMMIT_HEAD_TAG.contains(HOTFIX_TAG_FILTER)){
+        //             echo 'Build on HotFix'
+        //             //Builds as :hotfix 
+        //             echo 'Image Tag:' + BUILD_IMAGE_TAG
+        //             //Will need to either create a build-config on the fly, or create one ahead of time specifically for hotfix.
+        //             echo 'Full Image Name: ' + BUILD_IMAGE_NAME
+        //             /* Real Code Below
+        //             // Image tag for "build" will already be set in BuildConfig
+        //             oc start-build "helpline-build-hotfix" --from-repo="." --wait=true --follow -n ${OS_BUILD_PROJECT}
+        //             */
+        //             sh 'oc whoami'
 
-                    //Tag as :gittag for deployment
-                    echo 'Tag Image as Hot Fix App Version also'
-                    sh "echo 'oc tag ${BUILD_IMAGE_NAME} ${DEPLOY_IMAGE_NAME}'"
-                    echo 'No Deployment to Release environment, just a build of image.'
+        //             //Tag as :gittag for deployment
+        //             echo 'Tag Image as Hot Fix App Version also'
+        //             sh "echo 'oc tag ${BUILD_IMAGE_NAME} ${DEPLOY_IMAGE_NAME}'"
+        //             echo 'No Deployment to Release environment, just a build of image.'
 
-                    //If we want to "build" as GitTag, we'll need to create a new Build-Config each time, with that GitTag version. Not sure it makes difference. Future idea?
-                } else {
-                    echo 'No Build.'
-                    echo 'Head Tag:' + COMMIT_HEAD_TAG
-                    echo 'Branch Name:' + env.BRANCH_NAME
-                }
-            }
-            stage ('Secrets Cleanup') {
-                echo 'Delete any secrets that are not needed (maybe build secrets?)'
+        //             //If we want to "build" as GitTag, we'll need to create a new Build-Config each time, with that GitTag version. Not sure it makes difference. Future idea?
+        //         } else {
+        //             echo 'No Build.'
+        //             echo 'Head Tag:' + COMMIT_HEAD_TAG
+        //             echo 'Branch Name:' + env.BRANCH_NAME
+        //         }
+        //     }
+        //     stage ('Secrets Cleanup') {
+        //         echo 'Delete any secrets that are not needed (maybe build secrets)'
 
-            }
-        }
+        //     }
+        // }
         stage('Deploy Application') {
             container('helm') {
                 stage('Initialize Helm') {
@@ -378,7 +380,7 @@ podTemplate(
                 }
                 stage ('Deploy with Helm') {
                     //Could make this a "configuration step, and just set all remaining values before a global "deploy"
-                    if (env.BRANCH_NAME == 'master' ){
+                    if (env.BRANCH_NAME == 'master'){
                         //Set Full path of TGZ
                         //def TGZ_PATH = TGZ_DEST_DIR + '/' + PACKAGE_NAME 
                         
