--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,8 +25,8 @@ def HOTFIX_IMAGE_TAG = "hotfix"
 //Uses same helm as PRD.
 
 //Git Variables
-def TAG_FILTER="prod-"
-def HOTFIX_TAG_FILTER = "hotfix-"
+def TAG_FILTER="mark-"
+def HOTFIX_TAG_FILTER = "mark-hot-"
 
 //Image Variables
 def IMAGE_NAME = "helpline"
@@ -255,7 +255,7 @@ podTemplate(
                     }
             */
             }
-            
+
             stage('Build Image') {
                 if (env.BRANCH_NAME == 'master') {
                     echo 'No Build'
