--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ def HOTFIX_IMAGE_TAG = "hotfix"
 
 //Git Variables
 def TAG_FILTER="mark-"
-def HOTFIX_TAG_FILTER = "mark-hot-"
+def HOTFIX_TAG_FILTER = "mark-hf-"
 
 //Image Variables
 def IMAGE_NAME = "helpline"
@@ -78,6 +78,14 @@ podTemplate(
                 COMMIT_HEAD_TAG = sh(returnStdout: true, script: "git tag -l --points-at HEAD | tail -1").trim()
                 echo 'Commit Head Tag:' + COMMIT_HEAD_TAG
                 echo 'Current Branch Name:' + env.BRANCH_NAME
+                if (COMMIT_HEAD_TAG.substring(0,TAG_FILTER.length()) == TAG_FILTER) {
+                            APP_VERSION = COMMIT_HEAD_TAG.substring(TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
+                        } else if (COMMIT_HEAD_TAG.substring(0,HOTFIX_TAG_FILTER.length()) == HOTFIX_TAG_FILTER) {
+                            APP_VERSION = COMMIT_HEAD_TAG.substring(HOTFIX_TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
+                        } else {
+                            APP_VERSION = COMMIT_HEAD_TAG
+                        }
+                echo 'App Version: ' + APP_VERSION
             }
             stage('Set Branch Variables') {
                 echo 'Set Branch Variables Branch:'
@@ -91,18 +99,7 @@ podTemplate(
                     //Tags for Master Release Checks.  Could add more filters, sig checks, etc.
                     if (COMMIT_HEAD_TAG == "") {
                         error "No Git Version at Master Head"
-                    } else {
-                        echo COMMIT_HEAD_TAG 
-                        //Get App Version for Regular Production Release Filter
-                        if (COMMIT_HEAD_TAG.substring(0,TAG_FILTER.length()) == TAG_FILTER) {
-                            APP_VERSION = COMMIT_HEAD_TAG.substring(TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
-                        } else if (COMMIT_HEAD_TAG.substring(0,HOTFIX_TAG_FILTER.length()) == HOTFIX_TAG_FILTER) {
-                            APP_VERSION = COMMIT_HEAD_TAG.substring(HOTFIX_TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
-                        } else {
-                            APP_VERSION = COMMIT_HEAD_TAG
-                        }
-                    }
-                    echo 'App Version: ' + APP_VERSION
+                    } 
                 } else if (env.BRANCH_NAME == 'develop'){
                     echo 'Execute on Develop'
                     OS_BUILD_PROJECT = OS_DEV_PROJECT
