--- a/jenkinsfile
+++ b/jenkinsfile
@@ -79,12 +79,12 @@ podTemplate(
                 echo 'Commit Head Tag:' + COMMIT_HEAD_TAG
                 echo 'Current Branch Name:' + env.BRANCH_NAME
                 if (COMMIT_HEAD_TAG.substring(0,TAG_FILTER.length()) == TAG_FILTER) {
-                            APP_VERSION = COMMIT_HEAD_TAG.substring(TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
-                        } else if (COMMIT_HEAD_TAG.substring(0,HOTFIX_TAG_FILTER.length()) == HOTFIX_TAG_FILTER) {
-                            APP_VERSION = COMMIT_HEAD_TAG.substring(HOTFIX_TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
-                        } else {
-                            APP_VERSION = COMMIT_HEAD_TAG
-                        }
+                    APP_VERSION = COMMIT_HEAD_TAG.substring(TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
+                } else if (COMMIT_HEAD_TAG.substring(0,HOTFIX_TAG_FILTER.length()) == HOTFIX_TAG_FILTER) {
+                    APP_VERSION = COMMIT_HEAD_TAG.substring(HOTFIX_TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
+                } else {
+                    APP_VERSION = ""
+                }
                 echo 'App Version: ' + APP_VERSION
             }
             stage('Set Branch Variables') {
